Fix site on mobile

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ img {
   height: 100%;
 }
 
+ul li {
+  margin-left: 1em;
+}
+
 .clear {
   clear: both;
 }
@@ -20,12 +24,11 @@ img {
 }
 
 .padding {
-  height: 150px;
+  height: 37vh;
 }
 
 .header {
-  padding-top: 4em;
-  padding-bottom: 4em;
+  padding-bottom: 11vmin;
 }
 
 .footer {
@@ -45,6 +48,7 @@ img {
 
 .two-column-list {
   column-count: 2;
+  list-style-position: outside;
 }
 
 .column-container {
@@ -65,13 +69,13 @@ img {
 }
 
 .column-left {
-  font-size: 14pt;
+  font-size: 1.3vmax;
   width: 65%;
   float: left;
 }
 
 .column-left > h4 {
-  font-size: 14pt;
+  font-size: 1.3vmax;
 }
 
 .column-right {
@@ -80,41 +84,49 @@ img {
 }
 
 #card, #contact {
-  padding-left: 2em;
-  padding-right: 2em;
+  padding-top: 2.5vmax;
+  clear: both;
+  padding-left: 1vmin;
+  padding-right: 1vmin;
   text-align: center;
-  margin-top: 10em;
-}
-
-#card {
-  margin-top: 11em;
 }
 
 #contact {
-  margin-top: 2em;
+  padding-top: 4vmin;
+  margin-top: 2vmin;
+}
+
+#email {
+  margin-right: 8vw;
+}
+
+#phone {
+  margin-right: 6vw;
 }
 
 h1, h2, h3, h4 {
+  clear: both;
   margin: 0;
   padding: 0;
 }
 
 h1 {
-  font-size: 84pt;
+  font-size: 7.4vmax;
   font-family: 'Tangerine', sans-serif;
   color: rgb(115, 2, 2);
 }
 
 h2 {
-  font-size: 16pt;
+  font-size: 1.6vmax;
   font-variant: small-caps;
 }
 
 h2.title {
-  font-size: 22pt;
+  font-size: 2.2vmax;
 }
 
 h2.purpose {
+  font-size: 1.48vmax;
   font-variant: normal;
   padding-left: 2em;
   padding-right: 2em;
@@ -122,13 +134,13 @@ h2.purpose {
 }
 
 h3 {
-  font-size: 12pt;
+  font-size: 1.2vmax;
   color: rgb(235, 128, 11);
   text-transform: uppercase;
 }
 
 h4 {
-  font-size: 12pt;
+  font-size: 1.1vmax;
   font-weight: bold;
 }
 
@@ -209,4 +221,66 @@ a:hover {
   position:relative;
   left:98%;
   overflow:hidden;
+}
+
+@media screen and (max-width: 481px) {
+  body {
+    font-size: 2vmax;
+  }
+
+  h2 {
+    font-size: 2.2vmax;
+  }
+
+  h3 {
+    font-size: 2.3vmin;
+  }
+
+  h4 {
+    font-size: 1.75vmax;
+  }
+
+  .column-left {
+    font-size: 1.8vmax;
+  }
+
+  .column-left > h4 {
+    font-size: 1.8vmax;
+  }
+
+  .center-list > h4 {
+    padding-top: 2vmin;
+    width: 100%;
+  }
+
+  .two-column-list {
+    column-count: 1;
+    margin-right: 8vw;
+  }
+
+  h2.purpose {
+    font-size: 1.9vmax;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  #email {
+    margin: 0;
+    padding-bottom: 1em;
+    display: block;
+  }
+
+  #phone {
+    margin: 0;
+    display: block;
+  }
+
+  .padding {
+    height: 5vmax;
+  }
+
+  #contact {
+    padding-top: 0;
+    margin-top: 5vh;
+  }
 }
